adds seed data in ./bin

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
+    "lorem-hipsum": "^0.1.7",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
