--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "seed": "node bin/seed.js",
-    "start": "node server",
-    "start:dev": "npm run build:dev & npm run start-server",
+    "start": "npm run build:dev & npm run start-server",
+    "start:dev": "",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
     "start-server": "JWT=shh nodemon server -e html,js,scss --ignore public --ignore client",
