--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "npm run build -- --watch --mode=development",
     "seed": "node bin/seed.js",
     "start": "npm run build:dev & npm run start-server",
-    "start:dev": "",
+    "start:dev": "npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
     "start-server": "JWT=shh nodemon server -e html,js,scss --ignore public --ignore client",
@@ -33,13 +33,10 @@
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
     "sass": "^1.50.1",
-    "sequelize": "^6.3.5"
-  },
-  "devDependencies": {
+    "sequelize": "^6.3.5",
     "@babel/core": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
-    "axios": "^0.21.1",
     "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.2.0",
@@ -63,5 +60,8 @@
     "supertest": "^4.0.2",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
+  },
+  "devDependencies": {
+
   }
 }
