--- a/package.json
+++ b/package.json
@@ -62,6 +62,32 @@
     "webpack-cli": "^4.3.1"
   },
   "devDependencies": {
-
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.16.0",
+    "babel-loader": "^8.2.2",
+    "chai": "^4.2.0",
+    "css-loader": "^6.7.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "esm": "^3.2.25",
+    "mocha": "^6.2.3",
+    "nodemon": "^1.19.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-test-renderer": "^16.4.2",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^3.3.1",
+    "supertest": "^4.0.2",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
   }
 }
